# learn-code

./: README.md  de.sh
alg/: 1.cpp  1.py  a.out  alg  alg.cpp  hh  hh.cpp  myExceptions.h  search.cpp  sort.cpp
alg/1/: alg.java
cppthre/: 1  a.out
cppthre/cppthre/: 1.cpp  a.out  atomic  atomic.cpp  coro  coro.cpp  test  test.cpp  tredpool  tredpool.cpp
hwk/homework/: 1.js  homework.md  mul.js  plot.html
hwk/homework2/: 1  1.cpp  Untitled.md  a.out  poly.h
hwk/homework3/: Untitled.md
hwk/homework3/hwk/: Cargo.toml
hwk/homework3/hwk/src/: Derivative.rs  integ.rs  main  main.rs
hwk/homework4/: 1.py  Untitled.md  hwk.py  hwk1.py
hwk/homework5/: Untitled.md  hwk.java
hwk/homework6/: 1.md  hwk1.py
hwk/homework7/: 1.md  hwk.py
opencv/: CMakeLists.txt
opencv/example_cmake/: example.cpp
python/: 1.ipynb  1.py  2.ipynb  Untitled-1.ipynb  dectree.ipynb  lettcode.py
python/django_hew/mysite/: db.sqlite3
python/django_hew/mysite/mysite/: settings.py
python/django_hew/mysite/polls/: views.py
python/lunzi/: 1.py  2.py
python/socket/: 1.py
python/ten/: Untitled-1.ipynb  Untitled-2.ipynb  Untitled-3.ipynb  mymodel.h5
rust/hel/: Cargo.toml
rust/hel/restau/: Cargo.toml
rust/hel/src/: lib.rs  main.rs
rust/rust/m1/: Cargo.toml
rust/rust/m1/src/: main  main.rs
